PR bin/52272 - fix an off-by one that broke ~ expansions.